scripts/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod
  namespace: default
  annotations:
    # https://cert-manager.io/docs/tutorials/acme/nginx-ingress/#issuers
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # If using cert-manager
    # this is for websockets?
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - video-archiver.com 
    - otel.video-archiver.com 
    secretName: cluster-secret-tls # cert-manager creates this automatically
  rules:
  - host: video-archiver.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-react
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: archive-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: arch-auth
            port:
              number: 80
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: ipfs-gateway
            port:
              number: 80
  - host: otel.video-archiver.com 
    http:
      paths:
      - path: /v1/traces
        pathType: Prefix
        backend:
          service:
            name: otel-collector
            port:
              number: 4318
